test/bad/b7.erl
-module(b6).

% a value cannot be applied!
foo() -> X = "", X().